// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly creates default environment if \`--env.name\` is supplied.: dev env properties 1`] = `
Env {
  "binDir": "/test/opensearchDashboardsRoot/bin",
  "cliArgs": Object {
    "basePath": false,
    "cache": true,
    "dev": true,
    "disableOptimizer": true,
    "dist": false,
    "envName": "development",
    "quiet": false,
    "repl": false,
    "runExamples": false,
    "silent": false,
    "watch": false,
  },
  "configDir": "/test/opensearchDashboardsRoot/config",
  "configs": Array [
    "/some/other/path/some-opensearch-dashboards.yml",
  ],
  "homeDir": "/test/opensearchDashboardsRoot",
  "isDevClusterManager": false,
  "logDir": "/test/opensearchDashboardsRoot/log",
  "mode": Object {
    "dev": true,
    "name": "development",
    "prod": false,
  },
  "packageInfo": Object {
    "branch": "feature-v1",
    "buildNum": 9007199254740991,
    "buildSha": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
    "dist": false,
    "version": "v1",
    "wazuhVersion": "4.x.x",
  },
  "pluginSearchPaths": Array [
    "/test/opensearchDashboardsRoot/src/plugins",
    "/test/opensearchDashboardsRoot/plugins",
    "/test/opensearchDashboardsRoot/../opensearch-dashboards-extra",
  ],
}
`;

exports[`correctly creates default environment if \`--env.name\` is supplied.: prod env properties 1`] = `
Env {
  "binDir": "/test/opensearchDashboardsRoot/bin",
  "cliArgs": Object {
    "basePath": false,
    "cache": true,
    "dev": false,
    "disableOptimizer": true,
    "dist": false,
    "envName": "production",
    "quiet": false,
    "repl": false,
    "runExamples": false,
    "silent": false,
    "watch": false,
  },
  "configDir": "/test/opensearchDashboardsRoot/config",
  "configs": Array [
    "/some/other/path/some-opensearch-dashboards.yml",
  ],
  "homeDir": "/test/opensearchDashboardsRoot",
  "isDevClusterManager": false,
  "logDir": "/test/opensearchDashboardsRoot/log",
  "mode": Object {
    "dev": false,
    "name": "production",
    "prod": true,
  },
  "packageInfo": Object {
    "branch": "feature-v1",
    "buildNum": 9007199254740991,
    "buildSha": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
    "dist": false,
    "version": "v1",
    "wazuhVersion": "4.x.x",
  },
  "pluginSearchPaths": Array [
    "/test/opensearchDashboardsRoot/src/plugins",
    "/test/opensearchDashboardsRoot/plugins",
    "/test/opensearchDashboardsRoot/../opensearch-dashboards-extra",
  ],
}
`;

exports[`correctly creates default environment in dev mode when isDevClusterManager and isDevClusterMaster both are true: env properties 1`] = `
Env {
  "binDir": "/test/opensearchDashboardsRoot/bin",
  "cliArgs": Object {
    "basePath": false,
    "cache": true,
    "dev": true,
    "disableOptimizer": true,
    "dist": false,
    "quiet": false,
    "repl": false,
    "runExamples": false,
    "silent": false,
    "watch": false,
  },
  "configDir": "/test/opensearchDashboardsRoot/config",
  "configs": Array [
    "/test/cwd/config/opensearch_dashboards.yml",
  ],
  "homeDir": "/test/opensearchDashboardsRoot",
  "isDevClusterManager": true,
  "logDir": "/test/opensearchDashboardsRoot/log",
  "mode": Object {
    "dev": true,
    "name": "development",
    "prod": false,
  },
  "packageInfo": Object {
    "branch": "some-branch",
    "buildNum": 9007199254740991,
    "buildSha": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
    "dist": false,
    "version": "some-version",
    "wazuhVersion": "4.x.x",
  },
  "pluginSearchPaths": Array [
    "/test/opensearchDashboardsRoot/src/plugins",
    "/test/opensearchDashboardsRoot/plugins",
    "/test/opensearchDashboardsRoot/../opensearch-dashboards-extra",
  ],
}
`;

exports[`correctly creates default environment in dev mode when isDevClusterManager is true: env properties 1`] = `
Env {
  "binDir": "/test/opensearchDashboardsRoot/bin",
  "cliArgs": Object {
    "basePath": false,
    "cache": true,
    "dev": true,
    "disableOptimizer": true,
    "dist": false,
    "quiet": false,
    "repl": false,
    "runExamples": false,
    "silent": false,
    "watch": false,
  },
  "configDir": "/test/opensearchDashboardsRoot/config",
  "configs": Array [
    "/test/cwd/config/opensearch_dashboards.yml",
  ],
  "homeDir": "/test/opensearchDashboardsRoot",
  "isDevClusterManager": true,
  "logDir": "/test/opensearchDashboardsRoot/log",
  "mode": Object {
    "dev": true,
    "name": "development",
    "prod": false,
  },
  "packageInfo": Object {
    "branch": "some-branch",
    "buildNum": 9007199254740991,
    "buildSha": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
    "dist": false,
    "version": "some-version",
    "wazuhVersion": "4.x.x",
  },
  "pluginSearchPaths": Array [
    "/test/opensearchDashboardsRoot/src/plugins",
    "/test/opensearchDashboardsRoot/plugins",
    "/test/opensearchDashboardsRoot/../opensearch-dashboards-extra",
  ],
}
`;

exports[`correctly creates default environment in dev mode when isDevClusterMaster (deprecated) is true: env properties 1`] = `
Env {
  "binDir": "/test/opensearchDashboardsRoot/bin",
  "cliArgs": Object {
    "basePath": false,
    "cache": true,
    "dev": true,
    "disableOptimizer": true,
    "dist": false,
    "quiet": false,
    "repl": false,
    "runExamples": false,
    "silent": false,
    "watch": false,
  },
  "configDir": "/test/opensearchDashboardsRoot/config",
  "configs": Array [
    "/test/cwd/config/opensearch_dashboards.yml",
  ],
  "homeDir": "/test/opensearchDashboardsRoot",
  "isDevClusterManager": true,
  "logDir": "/test/opensearchDashboardsRoot/log",
  "mode": Object {
    "dev": true,
    "name": "development",
    "prod": false,
  },
  "packageInfo": Object {
    "branch": "some-branch",
    "buildNum": 9007199254740991,
    "buildSha": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
    "dist": false,
    "version": "some-version",
    "wazuhVersion": "4.x.x",
  },
  "pluginSearchPaths": Array [
    "/test/opensearchDashboardsRoot/src/plugins",
    "/test/opensearchDashboardsRoot/plugins",
    "/test/opensearchDashboardsRoot/../opensearch-dashboards-extra",
  ],
}
`;

exports[`correctly creates default environment in prod distributable mode.: env properties 1`] = `
Env {
  "binDir": "/test/opensearchDashboardsRoot/bin",
  "cliArgs": Object {
    "basePath": false,
    "cache": true,
    "dev": false,
    "disableOptimizer": true,
    "dist": false,
    "quiet": false,
    "repl": false,
    "runExamples": false,
    "silent": false,
    "watch": false,
  },
  "configDir": "/test/opensearchDashboardsRoot/config",
  "configs": Array [
    "/some/other/path/some-opensearch-dashboards.yml",
  ],
  "homeDir": "/test/opensearchDashboardsRoot",
  "isDevClusterManager": false,
  "logDir": "/test/opensearchDashboardsRoot/log",
  "mode": Object {
    "dev": false,
    "name": "production",
    "prod": true,
  },
  "packageInfo": Object {
    "branch": "feature-v1",
    "buildNum": 100,
    "buildSha": "feature-v1-build-sha",
    "dist": true,
    "version": "v1",
    "wazuhVersion": "4.x.x",
  },
  "pluginSearchPaths": Array [
    "/test/opensearchDashboardsRoot/src/plugins",
    "/test/opensearchDashboardsRoot/plugins",
    "/test/opensearchDashboardsRoot/../opensearch-dashboards-extra",
  ],
}
`;

exports[`correctly creates default environment in prod non-distributable mode.: env properties 1`] = `
Env {
  "binDir": "/test/opensearchDashboardsRoot/bin",
  "cliArgs": Object {
    "basePath": false,
    "cache": true,
    "dev": false,
    "disableOptimizer": true,
    "dist": false,
    "quiet": false,
    "repl": false,
    "runExamples": false,
    "silent": false,
    "watch": false,
  },
  "configDir": "/test/opensearchDashboardsRoot/config",
  "configs": Array [
    "/some/other/path/some-opensearch-dashboards.yml",
  ],
  "homeDir": "/test/opensearchDashboardsRoot",
  "isDevClusterManager": false,
  "logDir": "/test/opensearchDashboardsRoot/log",
  "mode": Object {
    "dev": false,
    "name": "production",
    "prod": true,
  },
  "packageInfo": Object {
    "branch": "feature-v1",
    "buildNum": 9007199254740991,
    "buildSha": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
    "dist": false,
    "version": "v1",
    "wazuhVersion": "4.x.x",
  },
  "pluginSearchPaths": Array [
    "/test/opensearchDashboardsRoot/src/plugins",
    "/test/opensearchDashboardsRoot/plugins",
    "/test/opensearchDashboardsRoot/../opensearch-dashboards-extra",
  ],
}
`;

exports[`correctly creates environment with constructor.: env properties 1`] = `
Env {
  "binDir": "/some/home/dir/bin",
  "cliArgs": Object {
    "basePath": false,
    "cache": true,
    "dev": false,
    "disableOptimizer": true,
    "dist": false,
    "quiet": false,
    "repl": false,
    "runExamples": false,
    "silent": false,
    "watch": false,
  },
  "configDir": "/some/home/dir/config",
  "configs": Array [
    "/some/other/path/some-opensearch-dashboards.yml",
  ],
  "homeDir": "/some/home/dir",
  "isDevClusterManager": false,
  "logDir": "/some/home/dir/log",
  "mode": Object {
    "dev": false,
    "name": "production",
    "prod": true,
  },
  "packageInfo": Object {
    "branch": "feature-v1",
    "buildNum": 100,
    "buildSha": "feature-v1-build-sha",
    "dist": true,
    "version": "v1",
    "wazuhVersion": "4.x.x",
  },
  "pluginSearchPaths": Array [
    "/some/home/dir/src/plugins",
    "/some/home/dir/plugins",
    "/some/home/dir/../opensearch-dashboards-extra",
  ],
}
`;
